--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
     <base href="/">
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <link href="favicon.ico" rel="icon" type="image/x-icon">
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
 </head>
 <body>
 <app-root></app-root>
